finalizing website and fixing typos

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ pre { margin-left: 10px; border-left: 2px solid grey; padding-left: 4px; line-he
 		  
 		  <div class="oneclickoption">
 			<h3>Proxied</h3> 
-			<p>Your keywords are proxied through ddgg.nfriedly.com to to restore the bangs (!s) that google strips from the suggestions.</p>
+			<p>Your keywords are proxied through ddgg.nfriedly.com to to restore the !bangs that google strips from the suggestions.</p>
 			<p>This is the recommended method.</p>
 			<a href="javascript:installSearchEngine('proxied')">Install Proxied</a>
 		  </div>
