a few more tweaks to the documentation

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ pre { margin-left: 10px; border-left: 2px solid grey; padding-left: 4px; line-he
 			<h3>It looks like you're in Chrome.</h3>
 			<h4>To make Duck Duck Go + Google the default search engine:</h4>
 				<ol>
-				  <li>Click the wrench icon (<img src="images/chrome-wrench-green.jpg" alt="" align="middle" />) and choose <b>Prefferences</b>.</li>
+				  <li>Click the wrench icon (<img src="images/chrome-wrench-green.jpg" alt="" align="middle" />) and choose <b>Preferences</b>.</li>
 				  <li>In the <b>Basics</b> section, click <b>Manage Search Engines...</b> </li>
 				  <li>Hover over "<b>Duck Duck Go + Google Suggest</b>" at the bottom of the list, select it, and click <b>Make Default</b>.</li>
 				</ol>
