--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@ function getPluginUrl(name){
 	return "http://ddgg.nfriedly.com/" + $('#xml-' + name).attr("href");
 }
 
+var _gaq = [];
+
 function installSearchEngine(which) {
  if (window.external && ("AddSearchProvider" in window.external)) {
     if(chrome){
@@ -272,18 +274,27 @@ function installSearchEngine(which) {
       // so we're doing the settimeout / focus watching junk above to handle that
       $(window).focusin(showChromeTips);
     }
+	_gaq.push(['_trackEvent', "Install", which]);
  } else {
    alert("Ut-Oh, it doesn't look like your browser can handle OpenSearch plugins. Nothing was installed.");
+	_gaq.push(['_trackEvent', "Install", "Failed"]);
  }
 }
 
 </script>
 
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
 <script type="text/javascript">
-_uacct = "UA-1735765-3";
-urchinTracker();
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-1735765-21']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
 </script>
 
 </body>
