fixing a link in the html

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ Suggest URL=http://<span id="opera-url">ddgg.nfriedly.com</span>/complete/search
     </div>
 
    <div id="ft">
-	The XML OpenSearch plugins, proxy server, and code to this page may be freely distributed and/or modified under the terms of the MIT License. A link back to <a href="/">nfriedly.com</a> would be appreciated :)
+	The XML OpenSearch plugins, proxy server, and code to this page may be freely distributed and/or modified under the terms of the MIT License. A link back to <a href="http://nfriedly.com" title="Node.js developer">nfriedly.com</a> would be appreciated :)
 	<br />
   	<br />This website is not affiliated with either Duck Duck Go or Google.
   </div>
