improed file server, removed janky monitoring code, add new relic, moved static assets to public folder, added beautification and hinting

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@ ul.contents li {font-size: 115%;}
 
 .highlight { 
 	background-color: #AAFF7D;
-	background-image: url("http://ddgg.nfriedly.com/images/ddg-green.png");
+	background-image: url("images/ddg-green.png");
 	background-position: 5px 5px;
 	background-repeat: no-repeat;
 	border: 3px dashed #67FF14;
