updating icon link to recommended format

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Duck Duck Go + Google Suggest OpenSearch Plugin and Proxy</title>
 
-<link rel="icon" type="image/x-icon" href="/favicon.ico"/>
+<link rel="shortcut icon" href="/favicon.ico" />
 
 <link rel="search" id="xml-direct" type="application/opensearchdescription+xml" title="Direct Duck Duck Go + Google Suggest" href="ddg-google.xml" >
 
